kubernetes/apps/web-research/crawl4ai/proxy/ciliumnetworkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: crawl4ai-proxy
  namespace: envoy-gateway-system
spec:
  endpointSelector:
    matchLabels:
      gateway.envoyproxy.io/owning-gateway-name: crawl4ai
      gateway.envoyproxy.io/owning-gateway-namespace: web-research
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: automation
        app.kubernetes.io/name: n8n
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: gatus
        app.kubernetes.io/name: gatus
    toPorts:
    - ports:
      - port: '8080'
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: monitoring
        app.kubernetes.io/name: prometheus
    toPorts:
    - ports:
      - port: '19001'
        protocol: TCP
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
    toPorts:
    - ports:
      - port: '53'
        protocol: UDP
      - port: '53'
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: web-research
        app.kubernetes.io/name: crawl4ai
    toPorts:
    - ports:
      - port: '11235'
        protocol: TCP
      - port: '9000'
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: envoy-gateway-system
        app.kubernetes.io/name: gateway-helm
        app.kubernetes.io/instance: envoy-gateway
        control-plane: envoy-gateway
    toPorts:
    - ports:
      - port: '18000'
        protocol: TCP
